<resources>
    <string name="app_name" translatable="false">LibraryShowDemo</string>

    <!--Main-->
    <string name="main_flowlayout">流动布局示例</string>
    <string name="main_switch_icon">切换图片示例</string>
    <string name="main_toasty">个性化吐息示例</string>
    <string name="main_styleabletoast">格式化吐息示例</string>
    <string name="main_phoneregex">中国号码匹配示例</string>
    <string name="main_excelpanel">表格示例</string>
    <!--Toasty-->
    <string name="toasty_normal_toast_with_icon">带图片的正常吐息</string>
    <string name="toasty_normal_toast_without_icon">不带图片的正常吐息</string>
    <string name="toasty_warning_toast">警告吐息</string>
    <string name="toasty_info_toast">信息吐息</string>
    <string name="toasty_info_toast_with_formatting">带格式化的信息提示</string>
    <string name="toasty_error_toast">错误吐息</string>
    <string name="toasty_success_toast">成功吐息</string>
    <string name="toasty_custom_configuration">自定义内容</string>
    <string name="toasty_error_message">这是个错误提示</string>
    <string name="toasty_success_message">成功!</string>
    <string name="toasty_info_message">这是个信息提示</string>
    <string name="toasty_warning_message">这是个警告吐息</string>
    <string name="toasty_normal_message_without_icon">不带图片的正常吐息</string>
    <string name="toasty_normal_message_with_icon">带图片的正常吐息</string>
    <string name="toasty_custom_message" translatable="false">"sudo kill -9 everyone啊哈 "</string>
    <string name="toasty_custom_show_last">只显示最新的Toast</string>
    <!--PhoneRegex-->
    <string name="phoneregex_check">检查</string>
    <string name="phoneregex_input_number">输入手机号</string>
    <string-array name="phoneRegexType">
        <item>所有号码（手机卡 + 数据卡 + 上网卡）</item>
        <item>所有支持短信功能的号码（手机卡 + 上网卡）</item>
        <item>所有手机卡</item>
        <item>移动卡</item>
        <item>联通卡</item>
        <item>电信卡</item>
        <item>所有虚拟手机卡</item>
        <item>虚拟移动卡</item>
        <item>虚拟联通卡</item>
        <item>虚拟电信卡</item>
    </string-array>
    <!--StyleableToast-->
    <string name="styleabletoast_colorback">背景色</string>
    <string name="styleabletoast_colored_text">文本颜色</string>
    <string name="styleabletoast_bold_text">文本粗体</string>
    <string name="styleabletoast_custom_font">自定义字体</string>
    <string name="styleabletoast_corner_radius_5dp">圆角: 5dp</string>
    <string name="styleabletoast_icon_start">起始图片</string>
    <string name="styleabletoast_icon_end">"末尾图片 "</string>
    <string name="styleabletoast_icon_start_end">起始+末尾图片</string>
    <string name="styleabletoast_colored_stroke">斜体</string>
    <string name="styleabletoast_all_styles">所有格式</string>
    <string name="main_language_change">语言切换</string>
    <string name="language_auto">自动</string>
    <string name="language_chinese">简体中文</string>
    <string name="language_english">英文</string>
    <string name="language_now_is">现在就是</string>
    <string name="main_decide_year">判断设备年份</string>
    <string name="main_decide_year_cescription">用于对设备分级，以优化内存</string>
    <string name="decide_year_btn">判断年份</string>


</resources>
