<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/styleable_b1"
                style="@style/DemoButton"
                android:text="@string/styleabletoast_colorback" />

            <Button
                android:id="@+id/styleable_b2"
                style="@style/DemoButton"
                android:text="@string/styleabletoast_colored_text" />


            <Button
                android:id="@+id/styleable_b3"
                style="@style/DemoButton"
                android:text="@string/styleabletoast_bold_text" />

            <Button
                android:id="@+id/styleable_b4"
                style="@style/DemoButton"
                android:text="@string/styleabletoast_custom_font" />

            <Button
                android:id="@+id/styleable_b5"
                style="@style/DemoButton"
                android:text="@string/styleabletoast_corner_radius_5dp" />

            <Button
                android:id="@+id/styleable_b6"
                style="@style/DemoButton"
                android:text="@string/styleabletoast_icon_start" />

            <Button
                android:id="@+id/styleable_b7"
                style="@style/DemoButton"
                android:text="@string/styleabletoast_icon_end" />

            <Button
                android:id="@+id/styleable_b8"
                style="@style/DemoButton"
                android:text="@string/styleabletoast_icon_start_end" />

            <Button
                android:id="@+id/styleable_b9"
                style="@style/DemoButton"
                android:text="@string/styleabletoast_colored_stroke" />

            <Button
                android:id="@+id/styleable_b10"
                style="@style/DemoButton"
                android:text="@string/styleabletoast_all_styles" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>